--- a/CodeLife.web/appsettings.json
+++ b/CodeLife.web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Connection" : "Data Source = CHISOM-PC; Initial Catalog = CodeLifeDb; Integrated Security = True; Encrypt = False"
+  },
   "AllowedHosts": "*"
 }
